Key Information and Video Page Implementations

--- a/KingFahadPrimaryservice.html
+++ b/KingFahadPrimaryservice.html
@@ -90,7 +90,24 @@
                                                 <a href="KingFahadPrimaryabout.html"><span>About Us</span></a>
                                             </li>
                                             <li class="drop-holder">
-                                                <a href="KingFahadPrimaryservice.html">service</a>
+                                                <a href="#"><span>Services</span></a>
+                                                <ul class="drop-menu">
+                                                    <li>
+                                                        <a href="KingFahadPrimaryservice.html">Our Services</a>
+                                                    </li>
+                                                    <li class="drop-holder">
+                                                        <a href="javascript:void();">Student Projects</a>
+                                                        <ul class="drop-menu">
+                                                            <li class="drop-holder">
+                                                                <a href="#">Catering</a>
+                                                            </li>
+                                                            
+                                                                <li>
+                                                                    <a href="#">Electricity</a>
+                                                                </li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
                                             </li>
                                             <li class="drop-holder">
                                                 <a href="Gallery.html">Gallery</a>
