--- a/KingFahadPrimary.html
+++ b/KingFahadPrimary.html
@@ -86,8 +86,26 @@
                                             <li>
                                                 <a href="KingFahadPrimaryabout.html"><span>About Us</span></a>
                                             </li>
+                                            
                                             <li class="drop-holder">
-                                                <a href="KingFahadPrimaryservice.html">service</a>
+                                                <a href="#"><span>Services</span></a>
+                                                <ul class="drop-menu">
+                                                    <li>
+                                                        <a href="KingFahadPrimaryservice.html">Our Services</a>
+                                                    </li>
+                                                    <li class="drop-holder">
+                                                        <a href="javascript:void();">Student Projects</a>
+                                                        <ul class="drop-menu">
+                                                            <li class="drop-holder">
+                                                                <a href="#">Catering</a>
+                                                            </li>
+                                                            
+                                                                <li>
+                                                                    <a href="#">Electricity</a>
+                                                                </li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
                                             </li>
                                             <li class="drop-holder">
                                                 <a href="Gallery.html">Gallery</a>
@@ -436,7 +454,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="banner-item text-white" data-bg-image="assets/images/banner/inner-bg/1-7.png">
                             <div class="banner-content">
-                                <h3 class="title mb-3 wordtextCenter">Top Rated</h3>
+                                <h3 class="title mb-3 wordtextCenter">Our Mission</h3>
                                 <p class="short-desc mb-0">Top rated construction packages we
                                     provide page editors now use Lorem as their default model text</p>
                             </div>
@@ -445,7 +463,7 @@
                     <div class="col-lg-4 col-md-6 pt-6 pt-md-0">
                         <div class="banner-item text-white" data-bg-image="assets/images/banner/inner-bg/1-2.png">
                             <div class="banner-content">
-                                <h3 class="title mb-3 wordtextCenter">Best Quality</h3>
+                                <h3 class="title mb-3 wordtextCenter">Our Vision</h3>
                                 <p class="short-desc mb-0">Quality is the construction packages we provide page editors now use Lorem as
                                     their default model text</p>
                             </div>
@@ -454,7 +472,7 @@
                     <div class="col-lg-4 col-md-6 pt-6 pt-lg-0">
                         <div class="banner-item text-white" data-bg-image="assets/images/banner/inner-bg/1-7.png">
                             <div class="banner-content">
-                                <h3 class="title mb-3 wordtextCenter">Low Price</h3>
+                                <h3 class="title mb-3 wordtextCenter">Our Values</h3>
                                 <p class="short-desc mb-0">Pricing is the construction packages we provide page editors now use Lorem as
                                     their default model text</p>
                             </div>
