More Final changes implemented

--- a/Gallery.html
+++ b/Gallery.html
@@ -194,7 +194,7 @@
                 <div class="breadcrumb-content">
                     <span class="breadcrumb-sub-title text-white">Our Gallery</span>
                     <h1 class="breadcrumb-title mb-1 text-white">Gallery</h1>
-                    <p class="breadcrumb-desc font-size-20 text-white">Construction of itself, because it is pain some proper style design occur are pleasure</p>
+                    <p class="breadcrumb-desc font-size-20 text-white">The heart of King Fahad Islamic School beats with the rhythm of unity and inclusivity.</p>
                 </div>
             </div>
         </div>
@@ -381,8 +381,7 @@
                                         <img src="assets/images/logo/white1.png" alt="Logo">
                                     </a>
                                 </div>
-                                <p class="short-desc font-size-16 mb-5">Construction of itself, because it is are <br>
-                                    but because some proper style design is occur in toil and pain pleasure</p>
+                                <p class="short-desc font-size-16 mb-5">At King Fahad Islamic Primary School, our aim is not only to impart knowledge but also to nourish hearts and souls.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-2 col-sm-6 pl-xl-80 pt-8 pt-lg-0">
@@ -412,19 +411,19 @@
                                 <h3 class="heading text-white mb-6">Quick Links</h3>
                                 <ul class="widget-list-item text-hawkes-blue">
                                     <li>
-                                        <a href="#">Support Center</a>
+                                        <a href="KingFahadPrimaryAlumni.html">Alumins</a>
                                     </li>
                                     <li>
-                                        <a href="#">Offers & Promotion</a>
+                                        <a href="#">Vision 2023</a>
                                     </li>
                                     <li>
-                                        <a href="#">Terms & Conditions</a>
+                                        <a href="#">Primary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payment Method</a>
+                                        <a href="#">Secondary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Clients & Reviews</a>
+                                        <a href="FrequentlyAskedQuestions.html">Frequently Asked Questions</a>
                                     </li>
                                 </ul>
                             </div>
@@ -434,7 +433,7 @@
                                 <h3 class="heading text-white mb-6">Contact Info</h3>
                                 <div class="widget-list-item text-hawkes-blue">
                                     <div class="widget-address pb-5">
-                                        <p class="mb-1">Busega 6miles along masaka road,
+                                        <p class="mb-1">Busega 6 miles along masaka road,
                                             <span style="color: #45d651;">Kampala, Busega</span> <br>
                                         </p>
                                         <span style="color: #45d651;">Contacts primary : </span>
