--- a/KingFahadPrimaryGallery.html
+++ b/KingFahadPrimaryGallery.html
@@ -212,7 +212,7 @@
                 <div class="breadcrumb-content">
                     <span class="breadcrumb-sub-title text-white">Our Gallery</span>
                     <h1 class="breadcrumb-title mb-1 text-white">Gallery - Images</h1>
-                    <p class="breadcrumb-desc font-size-20 text-white">Construction of itself, because it is pain some proper style design occur are pleasure</p>
+                    <p class="breadcrumb-desc font-size-20 text-white">The heart of King Fahad Islamic School beats with the rhythm of unity and inclusivity.</p>
                 </div>
             </div>
         </div>
