--- a/KingFahadSecondarycontact.html
+++ b/KingFahadSecondarycontact.html
@@ -5,12 +5,12 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Contact - King Fahad Primary School</title>
+    <title>Contact - King Fahad Islamic Institute</title>
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Industry, Products Manufacturing Company, building companies, architecture firms, and the like can take to their advantage by using OxyBuild- Construction Bootstrap 5 Template. With this sophisticated exclusive Construction Bootstrap 5 web template, you can quickly have things in order.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
+        <!-- Favicon -->
+        <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon1.png" />
 
     <!-- CSS
     ============================================ -->
@@ -232,56 +232,6 @@
                     </div>
                 </div>
             </div>
-            <div class="offcanvas-minicart_wrapper" id="miniCart">
-                <div class="offcanvas-body">
-                    <div class="minicart-content">
-                        <div class="minicart-heading">
-                            <h4 class="mb-0">Shopping Cart</h4>
-                            <a href="#" class="button-close"><i class="ion-ios-close-empty"></i></a>
-                        </div>
-                        <ul class="minicart-list">
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#"><i class="ion-ios-close-empty"></i></a>
-                                <div class="product-item_img">
-                                    <img class="img-full" src="assets/images/product/small-size/1-1-100x103.jpg" alt="Product Image">
-                                </div>
-                                <div class="product-item_content">
-                                    <a class="product-item_title" href="shop.html">Cutting Pliers</a>
-                                    <span class="product-item_quantity">1 x $80.00</span>
-                                </div>
-                            </li>
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#"><i class="ion-ios-close-empty"></i></a>
-                                <div class="product-item_img">
-                                    <img class="img-full" src="assets/images/product/small-size/1-2-100x103.jpg" alt="Product Image">
-                                </div>
-                                <div class="product-item_content">
-                                    <a class="product-item_title" href="shop.html">Safety Helmet</a>
-                                    <span class="product-item_quantity">1 x $120.00</span>
-                                </div>
-                            </li>
-                            <li class="minicart-product">
-                                <a class="product-item_remove" href="#"><i class="ion-ios-close-empty"></i></a>
-                                <div class="product-item_img">
-                                    <img class="img-full" src="assets/images/product/small-size/1-3-100x103.jpg" alt="Product Image">
-                                </div>
-                                <div class="product-item_content">
-                                    <a class="product-item_title" href="shop.html">Jack Hammer Drill</a>
-                                    <span class="product-item_quantity">1 x $230.00</span>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="minicart-item_total">
-                        <span>Subtotal</span>
-                        <span class="ammount">$91.05</span>
-                    </div>
-                    <div class="group-btn_wrap d-grid gap-2">
-                        <a href="cart.html" class="btn btn-secondary btn-primary-hover">View Cart</a>
-                        <a href="checkout.html" class="btn btn-secondary btn-primary-hover">Checkout</a>
-                    </div>
-                </div>
-            </div>
             <div class="global-overlay"></div>
         </header>
         <!-- Main Header Area End Here -->
@@ -290,9 +240,9 @@
         <div class="breadcrumb-area breadcrumb-height" data-bg-image="assets/images/breadcrumb/bg/SecondaryWallpaper3.jpg">
             <div class="container">
                 <div class="breadcrumb-content">
-                    <span class="breadcrumb-sub-title text-dark" style="color: #7d6609;">Contact us</span>
-                    <h1 class="breadcrumb-title mb-1 " style="color: #7d6609;">Get in Touch</h1>
-                    <p class="breadcrumb-desc font-size-20 " style="color: #7d6609;" >Construction of itself, because it is pain some proper style design occur are pleasure</p>
+                    <span class="breadcrumb-sub-title text-white" >Contact us</span>
+                    <h1 class="breadcrumb-title mb-1 text-warning" >Get in Touch</h1>
+                    <p class="breadcrumb-desc font-size-20 text-white wordtext" >At King Fahad Islamic Institute, your satisfaction and convenience are our top priorities. We warmly welcome you to reach out to us for any queries, concerns, or assistance you may need.</p>
                 </div>
             </div>
         </div>
@@ -306,7 +256,7 @@
                         <div class="col-lg-6">
                             <div class="contact-img-wrap">
                                 <div class="contact-img">
-                                    <img src="assets/images/contact/1-1-510x587.jpg" alt="Contact Image">
+                                    <img src="assets/images/contact/contact1.jpg" alt="Contact Image">
                                 </div>
                                 <div class="contact-pattern">
                                     <img src="assets/images/contact/pattern.png" alt="Pattern">
@@ -315,35 +265,29 @@
                         </div>
                         <div class="col-lg-6 ps-lg-10 pt-10 pt-lg-0">
                             <div class="contact-content">
-                                <span class="sub-title mb-2">Do you have a project? let’s start</span>
+                                <span class="sub-title mb-2">Do you have a question? let’s start</span>
                                 <h2 class="title mb-3">Contact with us</h2>
-                                <p class="short-desc mb-0">Construction of itself, because it is pain, but because some are
-                                    proper style design occur in toil and pain pleasure we have a expert team some of the main
-                                    features..</p>
+                                <p class="short-desc mb-0 wordtext">At King Fahad Islamic Institute, your satisfaction and convenience are our top priorities. We warmly welcome you to reach out to us for any queries, concerns, or assistance you may need. Our dedicated team is here to provide prompt and personalized support, ensuring that your experience with us is seamless and rewarding. Whether you have questions about our programs, facilities, or enrollment process, or if you need any guidance related to our services, we are just a call or message away</p>
                                 <div class="contact-info pt-5">
                                     <h3 class="title mb-0">Office Address</h3>
-                                    <p class="short-desc with-border mb-0">Melbourne’s GPO 434 Bourke St. Dhaka VIC 3074,
-                                        Australia</p>
+                                    <p class="short-desc with-border mb-0">Busega 6 miles along masaka road, Kampala, Uganda</p>
                                 </div>
                                 <div class="contact-info pt-4">
                                     <h3 class="title mb-0">Contact Info</h3>
                                     <ul>
                                         <li>
                                             Phone:
-                                            <a href="tel://+096-12458-875-895">+12345 879 854</a>
+                                            <a href="tel://+096-12458-875-895">+256 754709194</a>
                                         </li>
                                         <li>
                                             Fax:
-                                            <a href="tel://+096-12547-895-874">(+096) 12547 895 874</a>
+                                            <a href="tel://+096-12547-895-874">+256 772666493</a>
                                         </li>
                                         <li>
                                             Email:
-                                            <a class="text-lowercase" href="mailto://info@example.com">info@example.com</a>
+                                            <a class="text-lowercase" href="mailto:kingfahadislamicinstitute@gmail.com">kingfahadislamicinstitute@gmail.com</a>
                                         </li>
-                                        <li>
-                                            Web:
-                                            <a class="text-lowercase" href="mailto://www.example.com">www.example.com</a>
-                                        </li>
+                                        
                                     </ul>
                                 </div>
                             </div>
@@ -356,8 +300,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <h2 class="contact-form-title mb-3">Leave a Message</h2>
-                            <p class="contact-form-desc mb-0">Top rated construction packages we pleasure
-                                ationally obtain simple and easy</p>
+                            <p class="contact-form-desc mb-0 wordtext">Feel free to contact us through the provided channels, and we look forward to serving you with utmost care and professionalism. Thank you for choosing King Fahad Islamic Institute.</p>
                             <form id="contact-form" class="contact-form pt-10" action="https://whizthemes.com/mail-php/mamunur/oxybuild/oxybuild.php">
                                 <div class="group-input">
                                     <input type="text" name="con_name" id="con_name" placeholder="Your Name*" class="input-field me-6">
@@ -374,7 +317,7 @@
                         </div>
                         <div class="col-lg-6 ps-lg-10">
                             <div class="map-with-pattern pt-9">
-                                <iframe class="map-size" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.693667617067!2d144.946279515845!3d-37.82064364221098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4cee0cec83%3A0xd019c5f69915a4a0!2sCollins%20St%2C%20West%20Melbourne%20VIC%203003%2C%20Australia!5e0!3m2!1sen!2sbd!4v1607512676761!5m2!1sen!2sbd"></iframe>
+                                <iframe class="map-size" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7594995498575!2d32.51917817555196!3d0.31111936403269214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177da344946a62b1%3A0x1f04233c50962f05!2sKing%20Fahad%20Islamic%20Primary%20School%20-%20Busega!5e0!3m2!1sen!2sug!4v1690545962472!5m2!1sen!2sug"></iframe>
                                 <div class="contact-pattern">
                                     <img src="assets/images/contact/pattern.png" alt="Pattern">
                                 </div>
@@ -398,8 +341,7 @@
                                         <img src="assets/images/logo/SecondaryFooter.jpg" alt="Logo">
                                     </a>
                                 </div>
-                                <p class="short-desc font-size-16 mb-5">Construction of itself, because it is are <br>
-                                    but because some proper style design is occur in toil and pain pleasure</p>
+                                <p class="short-desc font-size-16 mb-5">At King Fahad Islamic Institute, our aim is not only to impart knowledge but also to nourish hearts and souls.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-2 col-sm-6 pl-xl-80 pt-8 pt-lg-0">
@@ -429,19 +371,19 @@
                                 <h3 class="heading text-white mb-6">Quick Links</h3>
                                 <ul class="widget-list-item text-hawkes-blue">
                                     <li>
-                                        <a href="#">Support Center</a>
+                                        <a href="KingFahadPrimaryAlumni.html">Alumins</a>
                                     </li>
                                     <li>
-                                        <a href="#">Offers & Promotion</a>
+                                        <a href="#">Vision 2023</a>
                                     </li>
                                     <li>
-                                        <a href="#">Terms & Conditions</a>
+                                        <a href="#">Primary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payment Method</a>
+                                        <a href="#">Secondary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Clients & Reviews</a>
+                                        <a href="FrequentlyAskedQuestions.html">Frequently Asked Questions</a>
                                     </li>
                                 </ul>
                             </div>
