--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                                                     <li>
                                                         <a href="#">Vision 2023</a>
                                                     </li>
+                                                    <li>
+                                                        <a href="KingFahadBoardTrustees.html">Board of Trustees</a>
+                                                    </li>
                                                     
                                                     <li>
                                                         <a href="FrequentlyAskedQuestions.html">Frequently asked questions</a>
@@ -402,7 +405,7 @@
 
 
                     <div class="swiper-slide animation-style-01">
-                        <div class="slide-inner bg-height" data-bg-image="assets/images/slider/bg/PrimaryWallpaper1.jpg">
+                        <div class="slide-inner bg-height" data-bg-image="assets/images/slider/bg/PrimaryWallpaper12.jpg">
                             <div class="container">
                                 <div class="slide-content">
                                     <span class="sub-title mb-1" style="color: white;">Since 1995</span>
@@ -421,7 +424,7 @@
 
                     
                     <div class="swiper-slide animation-style-01">
-                        <div class="slide-inner bg-height" data-bg-image="assets/images/slider/bg/PrimaryWallpaper1.jpg">
+                        <div class="slide-inner bg-height" data-bg-image="assets/images/slider/bg/SecondaryWallpaper2.jpg">
                             <div class="container">
                                 <div class="slide-content">
                                     <span class="sub-title mb-1" style="color: white;">Since 1995</span>
@@ -498,8 +501,7 @@
                                         <img src="assets/images/logo/white1.png" alt="Logo">
                                     </a>
                                 </div>
-                                <p class="short-desc font-size-16 mb-5">Construction of itself, because it is are <br>
-                                    but because some proper style design is occur in toil and pain pleasure</p>
+                                <p class="short-desc font-size-16 mb-5 wordtext">At King Fahad Islamic Primary School, our aim is not only to impart knowledge but also to nourish hearts and souls.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-2 col-sm-6 pl-xl-80 pt-8 pt-lg-0">
@@ -529,19 +531,19 @@
                                 <h3 class="heading text-white mb-6">Quick Links</h3>
                                 <ul class="widget-list-item text-hawkes-blue">
                                     <li>
-                                        <a href="#">Support Center</a>
+                                        <a href="KingFahadPrimaryAlumni.html">Alumins</a>
                                     </li>
                                     <li>
-                                        <a href="#">Offers & Promotion</a>
+                                        <a href="#">Vision 2023</a>
                                     </li>
                                     <li>
-                                        <a href="#">Terms & Conditions</a>
+                                        <a href="#">Primary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payment Method</a>
+                                        <a href="#">Secondary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Clients & Reviews</a>
+                                        <a href="FrequentlyAskedQuestions.html">Frequently Asked Questions</a>
                                     </li>
                                 </ul>
                             </div>
