--- a/KingFahadPrimaryabout.html
+++ b/KingFahadPrimaryabout.html
@@ -87,7 +87,7 @@
                                                 <a href="KingFahadPrimary.html"><span>Home</span></a>
                                             </li>
                                             <li>
-                                                <a href="KingFahadPrimaryabout.html"><span>About Us</span></a>
+                                                <a href="KingFahadPrimaryKingFahadPrimaryabout.html"><span>About Us</span></a>
                                             </li>
                                             <li>
                                                 <a href="KingFahadPrimaryservice.html"><span>Our School</span></a>
@@ -142,7 +142,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="KingFahadPrimaryabout.html">
+                                        <a href="KingFahadPrimaryKingFahadPrimaryabout.html">
                                             <span class="mm-text">About Us</span>
                                         </a>
                                     </li>
@@ -262,7 +262,7 @@
                                 <img src="assets/images/about/pattern.png" alt="Pattern">
                             </div>
                             <div class="about-img">
-                                <img class="img-full" src="assets/images/about/1-4.jpg" alt="About Banner">
+                                <img class="img-full" src="assets/images/about/about.jpg" alt="About Banner">
                             </div>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                                 <div class="swiper-slide">
                                     <div class="team-item">
                                         <div class="team-img">
-                                            <img class="img-full" src="assets/images/team/medium-size/1-2-210x341.jpg" alt="Team Member">
+                                            <img class="img-full" src="assets/images/team/medium-size/Registra.jpg" alt="Team Member">
                                             <ul class="add-action text-white">
                                                 <li class="team-social-link-wrap">
                                                     <a href="#">
@@ -379,7 +379,7 @@
                                 <div class="swiper-slide">
                                     <div class="team-item">
                                         <div class="team-img">
-                                            <img class="img-full" src="assets/images/team/medium-size/1-3-210x341.jpg" alt="Team Member">
+                                            <img class="img-full" src="assets/images/team/medium-size/HMPrimary.jpg" alt="Team Member">
                                             <ul class="add-action text-white">
                                                 <li class="team-social-link-wrap">
                                                     <a href="#">
@@ -419,7 +419,7 @@
                                 <div class="swiper-slide">
                                     <div class="team-item">
                                         <div class="team-img">
-                                            <img class="img-full" src="assets/images/team/medium-size/1-4-210x341.jpg" alt="Team Member">
+                                            <img class="img-full" src="assets/images/team/medium-size/DHMPrimary.jpg" alt="Team Member">
                                             <ul class="add-action text-white">
                                                 <li class="team-social-link-wrap">
                                                     <a href="#">
@@ -634,7 +634,7 @@
                                 <div class="swiper-slide">
                                     <div class="team-item">
                                         <div class="team-img">
-                                            <img class="img-full" src="assets/images/team/medium-size/1-1-210x341.jpg" alt="Team Member">
+                                            <img class="img-full" src="assets/images/team/medium-size/DosTheology.jpg" alt="Team Member">
                                             <ul class="add-action text-white">
                                                 <li class="team-social-link-wrap">
                                                     <a href="#">
@@ -714,7 +714,7 @@
                                 <div class="swiper-slide">
                                     <div class="team-item">
                                         <div class="team-img">
-                                            <img class="img-full" src="assets/images/team/medium-size/1-3-210x341.jpg" alt="Team Member">
+                                            <img class="img-full" src="assets/images/team/medium-size/Registra.jpg" alt="Team Member">
                                             <ul class="add-action text-white">
                                                 <li class="team-social-link-wrap">
                                                     <a href="#">
@@ -746,8 +746,8 @@
                                             </ul>
                                         </div>
                                         <div class="team-content">
-                                            <h3 class="title mb-1">Robarto <br> Carlos</h3>
-                                            <span class="occupation"> Architect</span>
+                                            <h3 class="title mb-1">Mr. Mukiibi <br> Abubakar</h3>
+                                            <span class="occupation"> DOS Secular</span>
                                         </div>
                                     </div>
                                 </div>
@@ -1018,8 +1018,7 @@
                                         <img src="assets/images/logo/white1.png" alt="Logo">
                                     </a>
                                 </div>
-                                <p class="short-desc font-size-16 mb-5">Construction of itself, because it is are <br>
-                                    but because some proper style design is occur in toil and pain pleasure</p>
+                                <p class="short-desc font-size-16 mb-5">At King Fahad Islamic Primary School, our aim is not only to impart knowledge but also to nourish hearts and souls.</p>
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-2 col-sm-6 pl-xl-80 pt-8 pt-lg-0">
@@ -1030,7 +1029,7 @@
                                         <a href="KingFahadPrimary.html">Home</a>
                                     </li>
                                     <li>
-                                        <a href="KingFahadPrimaryabout.html">About us</a>
+                                        <a href="KingFahadPrimaryKingFahadPrimaryabout.html">About us</a>
                                     </li>
                                     <li class="drop-holder">
                                         <a href="#"><span>Services</span></a>
@@ -1066,19 +1065,19 @@
                                 <h3 class="heading text-white mb-6">Quick Links</h3>
                                 <ul class="widget-list-item text-hawkes-blue">
                                     <li>
-                                        <a href="#">Support Center</a>
+                                        <a href="KingFahadPrimaryAlumni.html">Alumins</a>
                                     </li>
                                     <li>
-                                        <a href="#">Offers & Promotion</a>
+                                        <a href="#">Vision 2023</a>
                                     </li>
                                     <li>
-                                        <a href="#">Terms & Conditions</a>
+                                        <a href="#">Primary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Payment Method</a>
+                                        <a href="#">Secondary Admission</a>
                                     </li>
                                     <li>
-                                        <a href="#">Clients & Reviews</a>
+                                        <a href="FrequentlyAskedQuestions.html">Frequently Asked Questions</a>
                                     </li>
                                 </ul>
                             </div>
